--- a/_config.yml
+++ b/_config.yml
@@ -78,8 +78,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "images/profile_teruaki_enoto.png"
+  name             : "Your Sidebar Names"
+  avatar           : "500x300.png"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
