--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Teru Enoto"
+title                    : "Teruaki Enoto"
 title_separator          : "-"
 name                     : &name "Teruaki Enoto"
 description              : &description "personal description"
@@ -83,9 +83,9 @@ author:
   name             : "榎戸 輝揚"
   avatar           : "profile_teruaki_enoto.png"
   bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  location         : "京都大学"
   employer         :
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : # "http://yourfullgooglescholarurl.com"
   email            :
   uri              :
   bitbucket        :
@@ -94,13 +94,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "tenoto"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0003-1244-3100"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
