--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "tenoto.github.io/teruaki_enoto_jp.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
-words_per_minute         : 160
+#words_per_minute         : 160
+words_per_minute         : 180
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
@@ -86,7 +87,7 @@ author:
   location         : "京都大学"
   employer         :
   googlescholar    : # "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : "enoto@kusastro.kyoto-u.ac.jp"
   uri              :
   bitbucket        :
   codepen          :
@@ -171,9 +172,9 @@ kramdown:
 
 # Collections
 collections:
-#  teaching:
-#    output: false
-#    permalink: /:collection/:path/
+  teaching:
+    output: false
+    permalink: /:collection/:path/
   publications:
     output: true
     permalink: /:collection/:path/
@@ -206,14 +207,14 @@ defaults:
       layout: single
       author_profile: true
   # _teaching
-#  - scope:
-#      path: ""
-#      type: teaching
-#    values:
-#      layout: single
-#      author_profile: true
-#      share: true
-#      comments: true
+  - scope:
+      path: ""
+      type: teaching
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
   # _publications
   - scope:
       path: ""
