--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,23 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "研究"
+    url: /research/     
+#    url: /talks/   
+
+  - title: "論文"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+#  - title: "Teaching"
+#   url: /teaching/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
+  - title: "経歴"
+    url: /cv/   
+
+  - title: "ブログ"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Portfolio"
+#    url: /portfolio/
+
+#  - title: "Guide"
+#    url: /markdown/
