--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  publons          : "publons.com/a/1432823/"
 
 
 # Reading Files
